primeira e segunda fases finalizadas

--- a/JogoDaMemoriaFuncoes.html
+++ b/JogoDaMemoriaFuncoes.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./jogo.css">
   <link rel="stylesheet" href="./segundaFase.css">
   <link rel="stylesheet" href="./modalFuncoes.css">
-  <title>Jogo da Memória - WeDo</title>
+  <title>Jogo da Memória: Funções</title>
 </head>
 <body>
   <div class="game"></div>
