--- a/JogoDaMemoriaIcones.html
+++ b/JogoDaMemoriaIcones.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./jogo.css">
   <link rel="stylesheet" href="./primeiraFase.css">
   <link rel="stylesheet" href="./modal.css">
-  <title>Jogo da Memória - WeDo</title>
+  <title>Jogo da Memória: WeDo</title>
 </head>
 <body>
   <div class="game"></div>
@@ -28,7 +28,7 @@
         </div>
         <div class="modal-footer containerBotoes">
           <button type="button" class="btn btn-secondary" id="jogarNovamente" onclick="recarregaPagina()" data-dismiss="modal">Jogar novamente</button>
-          <a href="index.html"><button type="button" class="btn btn-primary" id="outroJogo" >Procurar outro jogo</button></a>
+          <a href="JogoDaMemoriaFuncoes.html"><button type="button" class="btn btn-primary" id="outroJogo" >Próxima Fase</button></a>
         </div>
       </div>
     </div>  
