organizei os arquivos

--- a/html/index.html
+++ b/html/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./jogo.css">
+  <link rel="stylesheet" href="../css/jogo.css">
   <title>Jogos</title>
 </head>
 <body>
   <div class="jogo">
-   <h1><a href="testeCartas.html">Jogo Da Memória - WeDo - Blocos de Programação</a></h1>
+   <h1><a href="JogoDaMemoriaIcones.html">Jogo Da Memória - WeDo - Blocos de Programação</a></h1>
   </div>
 </body>
 </html>
