--- a/html/JogoDaMemoriaIcones.html
+++ b/html/JogoDaMemoriaIcones.html
@@ -6,10 +6,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" 
   integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" 
   crossorigin="anonymous">
-  <link rel="stylesheet" href="./jogo.css">
-  <link rel="stylesheet" href="./segundaFase.css">
-  <link rel="stylesheet" href="./modalFuncoes.css">
-  <title>Jogo da Memória: Funções</title>
+  <link rel="stylesheet" href="../css/jogo.css">
+  <link rel="stylesheet" href="../css/primeiraFase.css">
+  <link rel="stylesheet" href="../css/modal.css">
+  <title>Jogo da Memória: WeDo</title>
 </head>
 <body>
   <div class="game"></div>
@@ -28,14 +28,14 @@
         </div>
         <div class="modal-footer containerBotoes">
           <button type="button" class="btn btn-secondary" id="jogarNovamente" onclick="recarregaPagina()" data-dismiss="modal">Jogar novamente</button>
-          <a href="index.html"><button type="button" class="btn btn-primary" id="outroJogo" >Procurar outro jogo</button></a>
+          <a href="JogoDaMemoriaFuncoes.html"><button type="button" class="btn btn-primary" id="outroJogo" >Próxima Fase</button></a>
         </div>
       </div>
     </div>  
   </div>
   <div class="" id="tela"></div>
-  <script src="./cartasFuncoes.js"></script>
-  <script src="jogo.js"></script>
-  <script src="modal.js"></script>
+  <script src="../js/cartasIcones.js"></script>
+  <script src="../js/jogo.js"></script>
+  <script src="../js/modal.js"></script>
 </body>
 </html>
