arrumei o erro do clique 'bugado' e organizei um pouco o código

--- a/html/JogoDaMemoriaIcones.html
+++ b/html/JogoDaMemoriaIcones.html
@@ -35,6 +35,8 @@
   </div>
   <div class="" id="tela"></div>
   <script src="../js/cartasIcones.js"></script>
+  <script src="../js/verificacoesEValidacoes.js"></script>
+  <script src="../js/sons.js"></script>
   <script src="../js/jogo.js"></script>
   <script src="../js/modal.js"></script>
 </body>
