o som é carregado uma única vez para aumentar a performance com pouca velocidade de conexão

--- a/html/JogoDaMemoriaFuncoes.html
+++ b/html/JogoDaMemoriaFuncoes.html
@@ -33,6 +33,10 @@
       </div>
     </div>  
   </div>
+  <audio class="audio" id="somAcerto" src="../sons/success.wav"></audio>
+  <audio class="audio" id="somDesviraCarta" src="../sons/desviraCartaSom.wav"></audio>
+  <audio class="audio" id="somViraCarta" src="../sons/viraCartaSom.wav"></audio>
+  <audio class="audio" id="somComemoracao" src="../sons/yeah.wav"></audio>
   <div class="" id="tela"></div>
   <script src="../js/cartasFuncoes.js"></script>
   <script src="../js/verificacoesEValidacoes.js"></script>
